...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <LinearLayout
                    android:id="@+id/yes_Scroll_View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/mentor1"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginEnd="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp">

...
