<resources>
    <string name="app_name">i210605</string>
    <string name="appName_2">me</string>
    <string name="appName_1">mentor</string>
    <string name="appWebsite">connect. ask. learn.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
...
