...
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_fields"
            android:elevation="20dp"
            android:gravity="center"
...
